--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -100,7 +100,7 @@ body {
         margin: 20px 0 0 0;
 
         img {
-            height: 90vh;
+            height: 60vh;
         }
 	}
 }
